# capstone-rag-system

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  script.py  streamlit_app.py
src/api/v1/routes/: query.py  upload.py
src/api/v1/schemas/: query_schema.py
src/core/: db.py
src/services/: agent.py  memory.py  query_service.py  tools.py
src/tools/: fts_search_tool.py  hybrid_search_tool.py  vector_search_tool.py
